--- a/README.qmd
+++ b/README.qmd
@@ -18,6 +18,7 @@ location and scale. Here's a quick overview:
 - The location $\mu(\boldsymbol{x})$ and scale $\sigma(\boldsymbol{x})$ are modeled through structured additive predictors, incorporating a wide range of linear, nonlinear, mixed, and spatial effects in a basis-function framework.
 - Inference is conducted using Markov chain Monte Carlo methods.
 - The library is built on top of the probabilistic programming framework Liesel. For more on Liesel, see [the Liesel documentation](https://docs.liesel-project.org/en/latest/) and [the Liesel GitHub repository](https://github.com/liesel-devs/liesel).
+- [Documentation is available here](https://liesel-devs.github.io/liesel-ptm/)
 
 ## Installation
 
